<resources>
    <string name="app_name">BigBrother</string>

    <string name="success_load_list">Success</string>
    <string name="actions_title">Actions</string>
    <string name="error_load_list">Load list with error</string>
    <string name="slow_load_list">Load list slowly</string>
    <string name="list_title" translatable="false">Github repositories</string>
    <string name="settings_group">Settings</string>
    <string name="app_theme">App theme</string>
    <string name="dark_mode" translatable="false">Dark mode</string>
    <string name="light_mode" translatable="false">Light mode</string>
    <string name="logcat_logs" translatable="false">Logcat logs</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="network_sample">Open network sample</string>
    <string name="generate_report">Generate report</string>
    <string name="force_crash">Force crash</string>
    <string name="report_sample">Open report sample</string>
    <string name="out_of_domain_description">In this Activity the bubble is not being displayed because the class contains the @OutOfDomain annotation</string>
    <string name="out_of_domain_button">Open out of domain Activity</string>
    <string name="custom_page_activity_button">Open activity with custom page</string>
    <string name="custom_page_description">This activity has a custom page, whenever expand the bubble there will be a page that only appears at that activity.\n\nTo create a page specifically to an activity, just do:</string>
    <string name="custom_page_descriptiosn">Essa activity tem uma pagina customizada, sempre que expandir a bubble vai ter uma pagina que só aparece nessa activity.\n\nPara criar uma pagina especificamente para uma activity, basta fazer:</string>
    <string name="custom_page_code_body" translatable="false">page(\"custom name\") {</string>
    <string name="custom_page_comment">// Inside BigBrotherProvider</string>
    <string name="custom_page_title">Custom page</string>
</resources>